# designerPlugins

./: CMakeLists.txt  CMakePresets.json  README.md
evaluateGeometrics/: CMakeLists.txt
itom1DQwtPlot/: CMakeLists.txt
itom2DQwtPlot/: CMakeLists.txt
itomIsoGLFigurePlugin/: CMakeLists.txt
itomQwtPlotBase/: CMakeLists.txt
matplotlibPlot/: CMakeLists.txt
motorController/: CMakeLists.txt
plotlyPlot/: CMakeLists.txt
qwt/: CMakeLists.txt
slider2D/: CMakeLists.txt
twipOGLPlugin/: CMakeLists.txt  twipOGLWidget.h
vtk3dVisualizer/: CMakeLists.txt
